--- a/config/ztf/config_0.yaml
+++ b/config/ztf/config_0.yaml
@@ -2,8 +2,10 @@
 alpha: 1.
 # recurrent architecture
 arch: gru
-# gmm energy weight
-beta: 0.001
+# gmm energy weight 0.001
+beta: 0.00001
+# singularity weight 0.005
+gamma: 0.000001
 # batch size
 bs: 1024
 # training device
@@ -12,7 +14,7 @@ dataset: ztf
 # dropout
 do: 0.5
 # epochs
-e: 5
+e: 2
 fold: false
 # learning rate
 lr: 0.0002
@@ -26,10 +28,8 @@ nl: 8
 nlayers: 2
 # output size
 nout: 1
-# outlier family (ztf)
-outlier_fam: periodic
 # early stopping patience
-patience: 30
+patience: 1000
 # number of repetitions
 rep: 5
 # weight decay weight
