--- a/config/config_0.yaml
+++ b/config/config_0.yaml
@@ -7,15 +7,11 @@ beta: 0.00001
 # singularity weight 0.005
 gamma: 0.000001
 # batch size
-bs: 1024
-# training device
-d: cuda:0
-dataset: asas_sn
+bs: 512
 # dropout
-do: 0.5
-fold: false
+do: 0.25
 # learning rate
-lr: 0.0002
+lr: 0.0005
 # estimation network size
 ne: 16
 # recurrent network size
@@ -26,11 +22,7 @@ nl: 8
 nlayers: 2
 # output size
 nout: 1
-# outlier family (ztf)
-outlier_fam: periodic
-# early stopping patience
-patience: 1000
-# number of repetitions
-rep: 5
 # weight decay weight
 wd: 0.0
+# lc folding
+fold: false
